--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Styles -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
     />
     <link
       rel="stylesheet"
@@ -36,52 +42,52 @@
       <div class="row">
         <div class="col-1 hour">8 am</div>
         <div class="col event" id="8"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">9 am</div>
         <div class="col event" id="9"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">10 am</div>
         <div class="col event" id="10"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">11 am</div>
         <div class="col event" id="11"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">12 pm</div>
         <div class="col event" id="12"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">1 pm</div>
         <div class="col event" id="1"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">2 pm</div>
         <div class="col event" id="2"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">3 pm</div>
         <div class="col event" id="3"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">4 pm</div>
         <div class="col event" id="4"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">5 pm</div>
         <div class="col event" id="5"></div>
-        <div class="col-1 saveBtn i:hover"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
       </div>
     </div>
 
