--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link
+    <link 
+      href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" 
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
     />
     <link
       rel="stylesheet"
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -37,56 +37,56 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <!-- Schedule -->
+    <!-- Calendar -->
     <div class="container">
       <div class="row">
         <div class="col-1 hour">9 am</div>
         <div class="col event" id="9"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">10 am</div>
         <div class="col event" id="10"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">11 am</div>
         <div class="col event" id="11"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">12 pm</div>
         <div class="col event" id="12"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">1 pm</div>
-        <div class="col event" id="1"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col event" id="13"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">2 pm</div>
-        <div class="col event" id="2"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col event" id="14"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">3 pm</div>
-        <div class="col event" id="3"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col event" id="15"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">4 pm</div>
-        <div class="col event" id="4"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col event" id="16"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
       <div class="row">
         <div class="col-1 hour">5 pm</div>
-        <div class="col event" id="5"></div>
-        <div class="col-1 saveBtn i:hover"><span class="oi oi-document"></span></div>
+        <div class="col event" id="17"></div>
+        <div class="col-1 saveBtn i:hover"><span class="oi oi-clipboard"></span></div>
       </div>
     </div>
 
-    <!-- Javascript -->
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
